grammar.js
    source_file: ($) =>
      seq(repeat($.comment), optional(seq($.script_block, repeat($.comment))), $.output_block, repeat($.comment)),

    identifier: ($) =>
      choice(
        reserved("global", $.identifier_word),
        alias($._kebab_identifier_word, $.identifier_word),
      ),

    identifier_word: (_) =>
      token(seq(IDENTIFIER_HEAD, repeat(seq("-", IDENTIFIER_SEGMENT)))),

    _kebab_identifier_word: (_) =>
      token(prec(1, seq(IDENTIFIER_HEAD, repeat1(seq("-", IDENTIFIER_SEGMENT))))),

    string_literal: ($) =>
      choice(
        seq(
          "'",
          repeat(
            choice(
              token.immediate(/[^'\\\r\n]+/),
              token.immediate(seq("\\", choice("\\", "'", '"', "n", "r", "t"))),
            ),
          ),
          token.immediate("'"),
        ),
        seq(
          '"',
          repeat(
            choice(
              token.immediate(choice(/[^"\\\r\n$]+/, "$")),
              token.immediate(seq("\\", choice("\\", "'", '"', "n", "r", "t"))),
              $.interpolation,
            ),
          ),
          token.immediate('"'),
        ),
        seq(
          '"""',
          repeat(
            choice(
              token.immediate(choice(/[^"\\$]+/, '"', '""', "$")),
              token.immediate(seq("\\", choice("\\", "'", '"', "n", "r", "t"))),
              $.interpolation,
            ),
          ),
          '"""',
        ),
      ),

    int_literal: (_) => /\d+/,
    null_literal: (_) => "null",

    script_block: ($) =>
      seq(
        $._script_delimiter,
        repeat($.comment),
        repeat(seq($.import_declaration, repeat($.comment))),
        repeat(seq($._declaration, repeat($.comment))),
        $._script_delimiter,
      ),

    _script_delimiter: (_) => token(prec(100, seq("|", repeat1("="), "|"))),

    _declaration: ($) =>
      choice(
        $.variable_declaration,
        $.type_declaration,
        $.schema_declaration,
        $.gen_doc_declaration,
        $.schema_doc_declaration,
      ),

    variable_declaration: ($) =>
      seq(
        $._type_reference,
        $.identifier,
        "=",
        $._expression,
        optional($.inline_description),
        ";",
      ),

    field_name: ($) =>
      choice(
        $.identifier,
        "alias",
        "schema",
        "output",
        "schema_file",
        "parse",
        "parse_file",
        "data",
        "from",
        "import",
        "record",
      ),
    _field_suffix: ($) =>
      choice(
        seq($.inline_description, optional($._field_separator)),
        seq($._field_separator, optional($.inline_description)),
      ),

    _type_reference: ($) =>
      choice(
        $.string_type,
        $.int_type,
        $.float_type,
        $.hex_int_type,
        $.hex_float_type,
        $.boolean_type,
        $.array_type,
        $.record_map_type,
        $.fusion_type,
        $.variant_type,
        $.choice_type,
        $.named_type,
      ),

    string_type: (_) => "string",
    int_type: (_) => "int",
    choice_type: ($) =>
      seq(
        "choice",
        "[",
        choice(
          $.choice_member,
          seq($.choice_member, repeat(seq(",", $.choice_member)))
        ),
        "]",
      ),

    choice_member: ($) =>
      choice(
        $.string_literal,
        $.int_literal,
        $.float_literal,
        $.hex_int_literal,
        $.hex_float_literal,
        $.boolean_literal,
      ),

    variant_type: ($) =>
      prec(1, seq("variant", "[", $._type_reference, repeat(seq(",", $._type_reference)), "]")),

    named_type: ($) => $.identifier,

    output_block: ($) =>
      choice(
        seq(
          optional(alias($._data_directive_list, $.directive_list)),
          "{",
          repeat(choice($.comment, $.output_field)),
          "}",
        ),
        seq(
          alias($._schema_directive_list, $.directive_list),
          "{",
          repeat(choice($.comment, $.output_schema_field)),
          "}",
        ),
      ),

    _data_directive_list: ($) =>
      prec(
        1,
        seq(
          "[",
          choice(
            alias($.data_output_mode_directive, $.output_mode_directive),
            $.schema_directive,
            $.schema_file_directive,
            $.parse_directive,
            $.parse_file_directive,
            $.description_directive,
          ),
          repeat(
            seq(
              ",",
              choice(
                alias($.data_output_mode_directive, $.output_mode_directive),
                $.schema_directive,
                $.schema_file_directive,
                $.parse_directive,
                $.parse_file_directive,
                $.description_directive,
              ),
            ),
          ),
          "]",
        ),
      ),

    _schema_directive_list: ($) =>
      prec(
        2,
        seq(
          "[",
          alias($.schema_output_mode_directive, $.output_mode_directive),
          optional(seq(",", $.description_directive)),
          "]",
        ),
      ),

    data_mode: (_) => choice("'data'", '"data"'),

    output_field: ($) =>
      choice(
        seq(
          $.field_name,
          optional($.optional_marker),
          ":",
          $._expression,
          optional($._field_suffix),
        ),
        seq($.field_name, optional($._field_suffix)),
      ),

    optional_marker: (_) => "?",

    _expression: ($) =>
      choice(
        $.conditional_expression,
        $._non_conditional_expression,
      ),

    _non_conditional_expression: ($) =>
      choice(
        $.logical_or_expression,
        $.logical_and_expression,
        $.bitwise_or_expression,
        $.bitwise_xor_expression,
        $.bitwise_and_expression,
        $.equality_expression,
        $.relational_expression,
        $.shift_expression,
        $.additive_expression,
        $.multiplicative_expression,
        $.exponent_expression,
        $.unary_expression,
        $.member_access,
        $._primary_expression,
      ),

    _primary_expression: ($) =>
      choice(
        $.identifier,
        $.float_literal,
        $.int_literal,
        $.hex_float_literal,
        $.hex_int_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.array_literal,
        $.record_literal,
        $.self_reference,
        $.parsed_variable_reference,
        $.parenthesized_expression,
        $.match_expression,
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    member_access: ($) =>
      prec.left(
        PREC.member,
        seq(
          field("target", choice($._primary_expression, $.member_access)),
          field("operator", choice(".", "?.")),
          field("member", $.identifier),
        ),
      ),

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(
          choice($.bang_operator, $.tilde_operator, $.plus_operator, $.minus_operator),
          $._non_conditional_expression,
        ),
      ),

    exponent_expression: ($) =>
      prec.right(PREC.exponent, seq($._non_conditional_expression, $.double_star_operator, $._non_conditional_expression)),

    multiplicative_expression: ($) =>
      prec.left(
        PREC.multiplicative,
        seq(
          $._non_conditional_expression,
          choice($.star_operator, $.slash_operator, $.percent_operator),
          $._non_conditional_expression,
        ),
      ),

    additive_expression: ($) =>
      prec.left(
        PREC.additive,
        seq($._non_conditional_expression, choice($.plus_operator, $.minus_operator), $._non_conditional_expression),
      ),

    shift_expression: ($) =>
      prec.left(
        PREC.shift,
        seq(
          $._non_conditional_expression,
          choice(
            $.shift_left_operator,
            $.shift_right_operator,
            $.unsigned_shift_right_operator,
          ),
          $._non_conditional_expression,
        ),
      ),

    bitwise_and_expression: ($) =>
      prec.left(PREC.bitwise_and, seq($._non_conditional_expression, $.ampersand_operator, $._non_conditional_expression)),

    bitwise_xor_expression: ($) =>
      prec.left(PREC.bitwise_xor, seq($._non_conditional_expression, $.caret_operator, $._non_conditional_expression)),

    bitwise_or_expression: ($) =>
      prec.left(PREC.bitwise_or, seq($._non_conditional_expression, $.pipe_operator, $._non_conditional_expression)),

    conditional_expression: ($) =>
      prec(PREC.conditional, seq($._non_conditional_expression, "?", $._non_conditional_expression, ":", $._non_conditional_expression)),

    match_expression: ($) =>
      seq(
        "match",
        "(",
        field("value", $._expression),
        ")",
        "{",
        repeat1($.match_arm),
        "}",
      ),

    match_arm: ($) =>
      seq(
        field("pattern", choice($._type_reference, $.choice_member)),
        "=>",
        field("value", $._expression),
        ",",
      ),

    record_literal: ($) => seq("{", repeat(choice($.comment, $.record_field)), "}"),

    record_field: ($) =>
      choice(
        seq(
          $.field_name,
          optional($.optional_marker),
          ":",
          $._expression,
          optional(","),
        ),
        seq($.field_name, optional(",")),
      ),

    tilde_operator: (_) => "~",
    plus_operator: (_) => "+",
    minus_operator: (_) => "-",
    star_operator: (_) => "*",
    slash_operator: (_) => "/",
    percent_operator: (_) => "%",
    double_star_operator: (_) => "**",
    shift_left_operator: (_) => "<<",
    shift_right_operator: (_) => ">>",
    unsigned_shift_right_operator: (_) => ">>>",
    ampersand_operator: (_) => "&",
    caret_operator: (_) => "^",
    pipe_operator: (_) => "|",
