test/corpus/optional_chaining.txt
==================
Optional member chain
==================

|===|
nullable User user = null;
|===|
[output = "data"]
{
  city?: user?.profile?.address?.city,
}

---

(source_file
  (script_block
    (variable_declaration
      (nullable_modifier)
      (named_type
        (identifier
          (identifier_word)))
      (identifier
        (identifier_word))
      (null_literal)))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (optional_marker)
      (member_access
        target: (member_access
          target: (member_access
            target: (identifier
              (identifier_word))
            member: (identifier
              (identifier_word)))
          member: (identifier
            (identifier_word)))
        member: (identifier
          (identifier_word))))))
